# sprout-v2

./: .gitignore  Dockerfile  LICENSE  README.md  installation.sh
bug-reports/: note  (+3 more)
query-generator/: aggregate_sprout_results.sh  ast.ml  avail.ml  cleanup.sh  common.ml  config.ml  create_table1.sh  dune  dune-project  error.ml  figure11  gclts.ml  lexer.ml  lexer.mll  loc.ml  main.ml  mb_prefix_extensibility.ml  mb_rcc.ml  mbavail.ml  naive_vs_opt.sh  naive_vs_opt_output.txt  nmc.ml  onlinewallet.ps  other_mbavail.ml  output.txt  p_scc_01.hes  parser.ml  parser.mli  parser.mly  print.ml  prodreach.ml  property_playground.ml  q_nmc_12_01.hes  rcc.ml  reach.ml  sb_rcc.ml  sbavail.ml  scc.ml  scc_defunct.ml  send-validity-no  (+8 more)
query-generator/_build/: .db  .digest-db  log
query-generator/_build/default/: a.out  ast.cma  ast.cmxa  ast.cmxs  avail.cma  avail.cmxa  avail.cmxs  common.cma  common.cmxa  common.cmxs  dune  dune-project  figure11  lexer.cma  lexer.cmxa  lexer.cmxs  lexer.mll  main.ml  nmc.cma  nmc.cmxa  nmc.cmxs  parser.cma  parser.cmxa  parser.cmxs  parser.ml  parser.mli  parser.mly  prodreach.cma  prodreach.cmxa  prodreach.cmxs  prodreach.ml  query-generator.dune-package  query-generator.install  rcc.cma  rcc.cmxa  rcc.cmxs  sample  scc.cma  scc.cmxa  scc.cmxs  (+4 more)
query-generator/_build/default/.ast.objs/byte/: ast.cmi  ast.cmo  ast.cmt
query-generator/_build/default/.ast.objs/native/: ast.cmx
query-generator/_build/default/.avail.objs/byte/: avail.cmi  avail.cmo  avail.cmt
query-generator/_build/default/.avail.objs/native/: avail.cmx
query-generator/_build/default/.common.objs/byte/: common.cmi  common.cmo  common.cmt
query-generator/_build/default/.merlin-conf/: exe-main  lib-ast  lib-avail  lib-common  lib-lexer  lib-nmc  lib-parser  lib-prodreach  lib-rcc  lib-scc  lib-unreach
query-generator/_build/default/figure11-generated/: r_scc_23.hes
query-generator/_build/default/figure11-repaired-generated/: p_nmc_01_23.hes  p_scc_01.hes  q_nmc_12_01.hes  q_scc_12.hes  r_nmc_23_12.hes  r_scc_23.hes
query-generator/_build/default/send-validity-no-generated/: p_scc_03.hes  r_scc_34.hes
query-generator/_build/default/send-validity-yes-generated/: p_scc_03.hes  r_scc_12.hes
query-generator/examples/: calculator  calculator-merged  chang_roberts_3  dijkstra_3  dutch_auction_3  fibonacci  figure11  fwd-auth  group-present  higher-lower  higher-lower-no  http  japanese_auction_3  load-balancer  negotiation  onlinewallet  pingpong  receive-validity-minimal-error  receive-validity-no  ring-election  simpl-auth  symbolic-two-bidder  three-buyer  three-buyer_red  ticket  travel-agency  travel-agency-light  two-bidder  two-buyer
query-generator/examples/0-notes/: calculator_notes  fibonacci_notes  fwd-auth_notes  group-present_notes  higher-lower_notes  http_notes  load-balancer_notes  negotiation_notes  onlinewallet_notes  pingpong_notes  simpl-auth_notes  symbolic-two-bidder_notes  three-buyer_notes  ticket_notes  travel-agency_notes  two-buyer_notes
query-generator/examples/1-scripts/: README.md  chang_roberts_leader_election.py  dijkstra_self_stabilizing.py  dutch_auction.py  japanese_auction.py
query-generator/examples/1-scripts/protocol/: expr.py  protocol.py  transition.py
query-generator/examples/2-optimization-experiments/: b1_scc_73_7_unreach_eliminated.hes  b1_scc_78_7_unreach_eliminated.hes  s_scc_23_1_unreach_optimized.hes  s_scc_23_refactor_1.hes  s_scc_23_refactor_2.hes  s_scc_23_refactor_3.hes  s_scc_23_refactor_4.hes  s_scc_23_refactor_5.hes  s_scc_23_refactor_6.hes  s_scc_23_refactor_7.hes  s_scc_23_refactor_8.hes  s_scc_23_refactor_and_unreach_0.hes  s_scc_23_refactor_and_unreach_0123.hes  s_scc_23_refactor_and_unreach_012345.hes  s_scc_23_refactor_and_unreach_1.hes  s_scc_23_refactor_and_unreach_2.hes  s_scc_23_refactor_and_unreach_3.hes  s_scc_23_refactor_and_unreach_345.hes  s_scc_23_refactor_and_unreach_4.hes  s_scc_23_refactor_and_unreach_5.hes  s_scc_23_refactor_and_unreach_6.hes  s_scc_23_refactor_and_unreach_7.hes  s_scc_23_refactor_and_unreach_8.hes  s_scc_23_refactor_and_unreach_pruned_1.hes
query-generator/examples/3-sat-reduction-tests/: 3-sat-e-reduction-sat  3-sat-reduction  3-sat-reduction-gt  3-sat-reduction-sat-simplified  3-sat-reduction-sat-x1  3-sat-reduction-sat-x1-bug  3-sat-reduction-sat-x1-bug2  3-sat-reduction-simplified  3-sat-reduction-simplified-further  note  test
query-generator/examples/binary-examples/: negotiation  simpl-auth  simpl-auth-rump  travel-agency-rump
query-generator/examples/calculator/: calculator  calculator-merged  calculator-no  note
query-generator/examples/figure11/: figure11-no-1  figure11-repairedagain
query-generator/examples/figure11+12/: note
query-generator/examples/figure15+16/: figure15-yes  figure16-no
query-generator/examples/figure5/: figure5-no  figure5-yes  note
query-generator/examples/figure6/: figure6-no
query-generator/examples/fwd-auth/: fwd-auth-yes-1  note
query-generator/examples/higher-lower/: higher-lower-encrypt  higher-lower-infinite  higher-lower-no  higher-lower-ultimate  higher-lower-yes  note  secret_preservation.hes  termination_property.hes
query-generator/examples/higher-lower/sessionstar examples/: HigherLowerEncrypt.scr  HigherLowerEncryptYes.scr  HigherLowerVariation.scr  HigherLowerYes.scr
query-generator/examples/ring-election/: note  ring-election  ring-election-no-1  ring-election-no-2  ring-election-simple  ring-election-yes-1  ring-election-yes-2
query-generator/examples/send-validity/: send-validity-no
query-generator/examples/sessionstar/HigherLower/: HigherLowerWinning.scr
query-generator/examples/symbolic-two-bidder/: note  symbolic-two-bidder-yes  symbolic-two-bidder-yes-1
query-generator/figure11-generated/: p_nmc_01_23.hes  q_scc_12.hes  r_nmc_23_12.hes
query-generator/figure11-repaired-generated/: p_nmc_01_23.hes  p_scc_01.hes  q_scc_12.hes  r_nmc_23_12.hes
query-generator/send-validity-no-generated/: p_scc_01.hes  r_scc_12.hes
query-generator/send-validity-yes-generated/: p_scc_01.hes  r_scc_34.hes
(+3648 files in other folders)
