(executable
 (name main)
 (public_name query-generator)
 (libraries ast common prodreach unreach avail scc rcc nmc lexer parser)
 (modules Main))

(env
 (dev
  (flags (:standard -w -27-33))))

(library
 (name ast)
 (modules Ast))

(library
 (name lexer)
 (libraries parser)
 (modules Lexer))

(library
 (name parser)
 (libraries ast)
 (modules Parser))

(library
 (name common)
 (libraries ast)
 (modules Common))

(library
 (name prodreach)
 (libraries ast common)
 (modules Prodreach))

(library
 (name unreach)
 (libraries ast common)
 (modules Unreach))

(library
 (name avail)
 (libraries ast common)
 (modules Avail))

(library
 (name scc)
 (libraries ast common prodreach unreach)
 (modules Scc))

(library
 (name rcc)
 (libraries ast common prodreach avail)
 (modules Rcc))

(library
 (name nmc)
 (libraries ast common prodreach)
 (modules Nmc))

(ocamllex
 (modules lexer))

(ocamlyacc
 (modules parser))
