(executable
 (name main)
 (public_name query-generator)
 (libraries unix logs util ast common prodreach unreach avail scc rcc nmc lexer parser)
 (modules Main)
 (preprocess (pps ppx_custom_printf)))

(env
 (dev
  (flags (:standard -w -26-27-33-32))))

(library
 (name util)
 (modules Print Loc Error)
 (libraries str sexplib)
 (preprocess
  (pps ppx_compare ppx_sexp_conv ppx_custom_printf)))

(library
 (name ast)
 (modules Ast))

(library
 (name lexer)
 (libraries util parser)
 (modules Lexer))

(library
 (name parser)
 (libraries ast)
 (modules Parser))

(library
 (name common)
 (libraries ast)
 (modules Common))

(library
 (name prodreach)
 (libraries ast common)
 (modules Prodreach))

(library
 (name unreach)
 (libraries ast common)
 (modules Unreach))

(library
 (name avail)
 (libraries ast common)
 (modules Avail))

(library
 (name scc)
 (libraries ast common prodreach unreach)
 (modules Scc))

(library
 (name rcc)
 (libraries ast common prodreach avail)
 (modules Rcc))

(library
 (name nmc)
 (libraries ast common prodreach)
 (modules Nmc))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain))

