(executable
 (name main)
 (public_name sprout)
 (libraries unix logs util ast common prodreach reach unreach avail gclts scc mb_rcc sb_rcc rcc nmc lexer parser config visual property_playground)
 (modules Main)
 (preprocess (pps ppx_custom_printf)))

(env
 (dev
  (flags (:standard -w -26-27-33-32))))

(library
 (name util)
 (modules Print Loc Error)
 (libraries str sexplib)
 (preprocess
  (pps ppx_compare ppx_sexp_conv ppx_custom_printf)))

(library
 (name ast)
 (modules Ast))

(library
 (name lexer)
 (libraries util parser)
 (modules Lexer))

(library
 (name parser)
 (libraries ast)
 (modules Parser))

(library
 (name common)
 (libraries ast)
 (modules Common))

(library
 (name config)
 (modules Config))

(library
 (name prodreach)
 (libraries ast common)
 (modules Prodreach))

(library
 (name reach)
 (libraries ast common)
 (modules Reach))

(library
 (name unreach)
 (libraries ast common)
 (modules Unreach))

(library
 (name avail)
 (libraries ast common)
 (modules Avail))

(library
 (name mbavail)
 (libraries ast common)
 (modules Mbavail))

(library
 (name other_mbavail)
 (libraries ast common)
 (modules Other_mbavail))

(library
 (name sbavail)
 (libraries ast common)
 (modules Sbavail))

(library 
 (name gclts)
 (libraries ast common reach)
 (modules Gclts))

(library
 (name scc)
 (libraries ast common prodreach unreach)
 (modules Scc))

(library
 (name rcc)
 (libraries ast common prodreach avail)
 (modules Rcc))

(library
 (name mb_rcc)
 (libraries ast common prodreach mbavail)
 (modules Mb_rcc))

(library
 (name sb_rcc)
 (libraries ast common prodreach sbavail)
 (modules Sb_rcc))

(library
 (name nmc)
 (libraries ast common prodreach)
 (modules Nmc))

(library
 (name visual)
 (libraries ast common)
 (modules Visual))

(library 
(name property_playground)
 (libraries unix logs util ast common prodreach reach unreach avail)
 (modules Property_playground))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain))

(rule 
 (alias ungenerate)
 (deps (universe))
 (action (system "rm -rf examples/*-generated")))
