(lang dune 3.12)

(using menhir 2.1)

(generate_opam_files true)

(package
 (name sprout)
 (synopsis "SPROUT: A Verifier for Symbolic Multiparty Protocols")
 (description "SPROUT takes as input symbolic multiparty protocols and checks GCLTS eligibility and implementability by generating muCLP instances and discharging them to MuVal.")
 (authors "Elaine Li efl9013@nyu.edu") 
 (maintainers "Elaine Li efl9013@nyu.edu")
 (depends
  (ocaml
   (>= 4.12.0))
  (dune
   (>= 3.12))
  (stdio
   (>= 0.14))
  (logs
   (>= 0.7.0))
  (fmt
   (>= 0.9.0))
  (ppx_custom_printf
   (>= 0.14.1))
  (ppx_compare
   (>= 0.14.0))
  (ppx_hash
   (>= 0.14.0))
  (ppx_sexp_conv
   (>= 0.14.3))
 )
)
